--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "md-links-jumvribeiro",
+  "name": "md-links",
   "version": "0.1.0",
-  "description": "Quatro projeto - Laboratoria",
+  "description": "Markdown - Laboratoria",
   "keywords": [
     "node",
     "markdown",
@@ -11,9 +11,9 @@
   "engines": {
     "node": ">=16.x"
   },
-  "bin":{
-    "mdLinks": ".src/cli.js"
-  }, 
+  "bin": {
+    "md-links": "./src/cli.js"
+  },
   "scripts": {
     "test": "jest--verbose --coverage",
     "eslint": "eslint --ext .js src/ test/",
@@ -27,7 +27,11 @@
   "dependencies": {
     "@babel/cli": "^7.21.0",
     "chalk": "^4.1.2",
-    "eslint": "^8.37.0",
-    "jest": "^29.5.0"
+    "eslint": "^8.51.0",
+    "jest": "^29.5.0",
+    "markdown-it": "^13.0.2",
+    "md-links": "^0.1.0",
+    "node-fetch": "^3.3.1",
+    "regex": "^0.1.1"
   }
 }
