--- a/package.json
+++ b/package.json
@@ -31,7 +31,11 @@
     "jest": "^29.5.0",
     "markdown-it": "^13.0.2",
     "md-links": "^0.1.0",
+    "node": "^21.1.0",
     "node-fetch": "^3.3.1",
     "regex": "^0.1.1"
+  },
+  "devDependencies": {
+    "typescript": "^5.2.2"
   }
 }
